--- a/_posts/2021-08-22-threebox.md
+++ b/_posts/2021-08-22-threebox.md
@@ -3,7 +3,7 @@ layout: post
 permalink: /mkt-threebox/
 title: '세가지 박스전략'
 date: 2021-08-22 20:37:00 +09:00
-feature: '/img/posts/05/main.jpg'
+feature: '/img/posts/05/main1.jpg'
 categories:
   - mkt-1
 tags:
