--- a/_posts/2021-09-03-persona.md
+++ b/_posts/2021-09-03-persona.md
@@ -3,7 +3,7 @@ layout: post
 permalink: /mkt-persona/
 title: '마케팅 페르소나 모델링'
 date: 2021-09-03 22:42:00 +09:00
-feature: '/img/posts/05/main1.jpg'
+feature: '/img/posts/06/main.png'
 categories:
   - mkt-1
 tags:
@@ -24,17 +24,38 @@ description: '마케팅 페르소나 모델링을 통해 타겟 유저 구체화
 최근 오더가 들어오지 않아 기계가동을 멈춘 힘든 시기를 겪고 있는 공장까지.<br><br>
 ![마케팅](/img/posts/06/factory.jpg)
 
-콧대 높은 메이저 공장에서는 최근 쿡 웨어 업계의 트랜드 및 새로운 공정에 관하여<br>어려운 말로 스치듯 빠르게 학습할 수 있었고
-국내 쿡 웨어 업계의 규모와 잠재력에 대해 가슴 설레이는 확신을 느낄 수 있었다.<br><br>
+콧대 높은 메이저 공장에서는 최근 쿡 웨어 업계의 트랜드 및 새로운 공정에 관하여<br>어려운 용어들로 스치듯 희미하게 배울수 있었고 동시에
+국내 쿡 웨어 업계의 <br>규모와 잠재력에 대해 가슴 설레이는 확신을 느낄 수 있었다.<br><br>
 반면 한때 영광의 시절을 보냈지만 현재 힘든 상황을 겪고 있는 공장에서는
 생산 프로세스 대해 보다 친절한 어조로 배울 수 있었지만 업계의 어쩔 수 없는 생태계적인 구조들로 인해 이러지도 저러지도 못할 것 같은 막막한 고충 및 시장에 대한 한계점을 느꼈다.
 
 이 시기에 학습했던 것들과 생산현장에서 느꼈던 소회에 대해서는 <br>추후 포스팅에서 써내려 나가도록 하고,
 
-이 글에서는 현재 준비 중인 친환경 쿡웨어 브랜드
-'Grainders' 의 페르소나<br>모델링 작업 가운데 내가 작성해본 페르소나에 대해 적어보기로 한다.
+브랜드 아이덴디티를 구축함과 동시에 <br>잠재고객군을 설정해 나가는데 있어 필수적으로 해야하는 작업인<br><br>
+<b>'마케팅 페르소나 모델링'</b> 에 대해 말해보고자 한다.<br>
 
-등장인물은 총 4명인데<br> 첫번째로 소개할 인물은 한세실업 퇴사 후 레트로 곱창집을 준비 중인 40대 남성이다.<br>
+#### 페르소나 모델링이란?
+
+어떤 제품 혹은 서비스를 사용할 만한 목표 인구 집단 안에 있는 다양한 사용자 유형들을 대표하는 가상의 인물을 구체화하는 것을 말한다. 즉, 사용자 분석을 통해 얻은 사용자 집단의 특징들을 이용해 페르소나는 디자인 방향을 결정하기 위해 공감할 수 있고 실제 자료로 이용되며, 프로젝트 아이디어(사용자 욕구, 기술, 동기, 타깃, 시장)를 도출하고, 각기 다른 사용자의 패턴을 대표할 수 있는 사용자 프로필을 생성하는 것이다. 페르소나는 어떤 제품이나 혹은 서비스를 개발하기 위해 시장과 환경, 그리고 사용자를 이해하기 위해 사용되는데 어떤 특정한 상황과 환경 속에서 어떤 전형적인 인물이 어떻게 행동할 것인가에 대한 예측을 위해 실제 사용자 자료를 바탕으로 개인의 개성을 부여해 만들어진다. 페르소나는 가상의 인물을 묘사하고 그 인물의 배경과 환경 등을 설명하는 문서로 꾸며지는데 가상의 이름, 목표, 평소에 느끼는 불편, 그 인물이 가지는 니즈 등으로 구성된다. 소프트웨어 개발, 가전제품 개발, 인터랙션 디자인 개발 등의 분야에서 사용자 연구의 한 방법과 마케팅 전략 수립을 위한 자료로 많이 이용되고 있다.
+
+페르소나 구현의 구체적 과정에는 여러 방법이 있지만, 원론적으로 어떻게 하는가의 문제로 보면 다음과 같은 기본 과정이 포함된다.
+
+① 가상화는 기본이 되는 사항으로, 고객 설문이나 사용 후기의 양식을 통해 얻은 자료로 고객의 과거 경험을 파악하고 이를 통해 니즈를 분석하고 최종적으로 가상의 고객(메타포)을 설정하는 것이다.
+
+② 사용자 분석을 통해 얻은 정성, 정량 조사 자료를 기반으로 해 만들어지는 것이기 때문에 신뢰성 있는 리서치가 진행되어야 한다.
+
+③ 또한 사실에 기반을 둔 사용자 조사 자료를 통해 얻어진 것(실제화)이기에 신뢰할 수 있는 데이터라는 사실을 늘 인지하고 있어야 한다.
+
+④ 최대한 다양한 요구사항을 고려해 한 제품·서비스에 대해 하나 이상의 페르소나가 존재한다는 사실을 충분히 인지해야 한다.
+
+⑤ 페르소나로 재구성하는 과정에서 조사자 뜻에 맞게 자료를 재구성하는 일이 없도록 주의해 마지막까지 오염되지 않은 페르소나를 뽑아내는 것이 중요하다.
+
+출처-인간과 컴퓨터:휴머니타스 테크놀로지, 신동희, 2012, 커뮤니케이션북스<br>
+
+여기에 등장하는 인물들은
+<b>'Grainders'</b> 의 페르소나<br>모델링 작업 가운데 내가 떠올려 본 인물들이다.
+
+등장인물은 총 4명으로<br> 첫번째로 소개할 인물은 한세실업 퇴사 후 레트로 곱창집을 준비 중인 40대 남성이다.<br>
 
 -------------------
 
@@ -74,8 +95,8 @@ description: '마케팅 페르소나 모델링을 통해 타겟 유저 구체화
 
 어릴적 부모님이 한우 소고기집을 운영하셨기
 때문에 고기부심이 강하다.  <br><br>
-어지간 해선 고깃집에서 집게를 양보하지 않으며,<br> 동석자들에게 마이야르 반응이나 캐러멜라이징법 등을 전파하며
-요리부심을 발산한다.<br>
+어지간 해선 고깃집에서 집게를 양보하지 않으며,<br> 동석자들에게 마이야르 반응이나 캐러멜라이징법 등을 설교하는둥<br>
+고기부심을 한껏 발산한다.<br>
 
 최근 코로나로 인한 경영악화로 인해
 실적이 저조해졌고,<br>이참에 희망퇴직을 신청하려고 마음먹었다.<br><br>
