--- a/_posts/2021-10-03-mbtitest.md
+++ b/_posts/2021-10-03-mbtitest.md
@@ -3,7 +3,7 @@ layout: post
 permalink: /mkt-mbtitest-1/
 title: '개발자 없이 MBTI 테스트 만들기'
 date: 2021-10-03 22:04:00 +09:00
-feature: '/img/posts/08/mbti_main.png'
+feature: '/img/posts/08/mbtimain.jpg'
 categories:
   - mkt-1
 tags:
