--- a/_posts/2021-08-22-threebox.md
+++ b/_posts/2021-08-22-threebox.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-permalink: /mkt-threebox/
+permalink: /mkt-threebox-1/
 title: '세가지 박스전략'
 date: 2021-08-22 20:37:00 +09:00
 feature: '/img/posts/05/main1.jpg'
