--- a/_posts/2021-10-03-mbtitest.md
+++ b/_posts/2021-10-03-mbtitest.md
@@ -102,9 +102,12 @@ E 2 : I 1 = E 승
 E 2 : I 2 = 동률. E 타입인지 I 타입인지 판가름 할 수 없음.
 
 아래 이미지를 보면 이해가 빠르다.
-![마케팅](/img/posts/08/mbti_3.png)
+![마케팅](/img/posts/08/mbti_3.png)<br>
+
 4쌍의 변인을 판가름 짓기 위해선 4가지의 질문이 필요하지만, 단 한가지의 상황으로 테스트에 참여한 유저가 E타입이다, I타입이다 판가름 짓기 어려우니 질문을 3가지 이상으로 늘리고 점수가 동점이 나오지 않도록 질문의 개수를 홀수로 맞추어야 한다.
 질문 갯수를 정했다면, 이제 각 성향을 구분 지을 수 있는 상황에 대해 시나리오를 짜야 한다.
+<br>
+
 ![마케팅](/img/posts/08/mbti_4.png)
 
 E와 I를 판가름 짓기 위해서는 이 사람이 내향적인지, 외향적인지 판가름 할 수 있는 상황을 만들어 질문해야 하는데 예를 들어,
@@ -118,25 +121,27 @@ B) 아니오 = I
 아래는 내가 제작한 슬램덩크 MBTI 테스트 중
 E와 I를 구분 짓는 3가지 질문이다.
 
-Q1) 농구부에 신입으로 입부한 당신. 전원이 모인 입부식에서 신입생 가운데 3명을 뽑아
-가벼운 실력 테스트를 진행한다고 한다. 당신의 반응은?
-E) 내 실력을 보여줄 좋은 기회! 가장 먼저 손들어 지원한다!
+##### Q1) 농구부에 신입으로 입부한 당신. 전원이 모인 입부식에서 신입생 가운데 3명을 뽑아 가벼운 실력 테스트를 진행한다고 한다. 당신의 반응은?
+
+E) 내 실력을 보여줄 좋은 기회! 가장 먼저 손들어 지원한다!<br>
 I) 섣불리 나섰다가 첫날부터 개망신 당할 수 있으니 다른 신입생들의 반응을 살핀다.
 
-Q2) 농구부 가운데 가장 친한 A가 농구부 활동에 회의를 느껴 농구부를 관두려 한다.
-당신의 반응은?
-E) A와 농구부 활동을 함께 싶으니 어떻게 설득할지 고민해본다.
+##### Q2) 농구부 가운데 가장 친한 A가 농구부 활동에 회의를 느껴 농구부를 관두려 한다. 당신의 반응은?
+
+E) A와 농구부 활동을 함께 싶으니 어떻게 설득할지 고민해본다.<br>
 I) 아쉽지만 본인이 싫으면 어쩔 수 없지. 그 동안 수고 많았다고 격려해준다.
 
-Q3) 아무리 연습해도 슛 폼이 부드럽지 못한 것 같아 불만족스럽다. 당신의 선택은?
-E) 별로 친하지는 않지만 슛 폼이 좋은 선배에게 1:1 코칭을 부탁드린다.
+##### Q3) 아무리 연습해도 슛 폼이 부드럽지 못한 것 같아 불만족스럽다. 당신의 선택은?
+
+E) 별로 친하지는 않지만 슛 폼이 좋은 선배에게 1:1 코칭을 부탁드린다.<br>
 I) 유튜브 및 시합영상을 돌려보며 스스로 기술을 체득할 때까지 연습한다.
 
 ‘슬램덩크’ 라는 세계관 속에 ‘참가자’의 모습을 신입생 농구 부원으로 투영시킨 뒤 보다 상황에
 몰입 할 수 있게 끔 상황을 설계 하였다.
 
 나머지,
-감각(S)/직관(N) 사고(T)/감정(F) 판단(J)/인식(P) 에 관련된 질문들도 위와 동일한 베이스로 상황을 설계한 뒤 명확한 대척점으로 구분 지을 수 있는 질문을 각 항목 당 3가지 씩 작성 하여 기획을 마무리 할 수 있다.
+감각(S)/직관(N) 사고(T)/감정(F) 판단(J)/인식(P)에<br>
+관련된 질문들도 위와 동일한 베이스로 상황을 설계한 뒤 명확한 대척점으로 구분 지을 수 있는 질문을 각 항목 당 3가지 씩 작성 하여 기획을 마무리 할 수 있다.
 
 모든 질문 과정이 끝나고 난 뒤 결과 페이지에는 참가자의 MBTI 결과 값을 포함하는 적절한 캐릭터 매칭 및 결과 값에 대한 설명이 필요하다. 물론 테스트의 목적에 따라 나누어지겠지만 아무래도 참가자의 흥미를 위한 테스트이다 보니, 각 유형들이 가지는 장점은 중점적으로 부각하고 단점은 크게 노출시키지 않는 편이 좋다고 생각한다.
 
