--- a/_posts/2021-12-23-regex.md
+++ b/_posts/2021-12-23-regex.md
@@ -3,7 +3,7 @@ layout: post
 permalink: /mkt-regex/
 title: '자주 쓰이는 정규표현식'
 date: 2021-12-23 14:53:00 +09:00
-feature: '/img/posts/10/000.gif'
+feature: '/img/posts/10/00.png'
 categories:
   - mkt-1
 tags:
