--- a/posts/2022-01-23-kakao.md
+++ b/posts/2022-01-23-kakao.md
@@ -7,12 +7,12 @@ feature: '/img/posts/10/main.jpg'
 categories:
   - mkt-1
 tags:
-  - 정규표현식
-  - 정규식
-  - 정규표현식 개념
-  - 자주 쓰이는 정규표현식
+  - 카카오모먼트
+  - 카카오비즈보드
+  - 카카오광고
+  - 카카오비즈보드광고
 
-description: '알아두면 유용한 정규표현식의 개념과 이해'
+description: '카카오모먼트 광고 알아보기 (기초)
 ---
 
 ## 자주 쓰이는 정규표현식
