--- a/_posts/2022-01-30-kakao.md
+++ b/_posts/2022-01-30-kakao.md
@@ -7,16 +7,16 @@ feature: '/img/posts/10/main.jpg'
 categories:
   - mkt-1
 tags:
-  - 정규표현식
-  - 정규식
-  - 정규표현식 개념
-  - 자주 쓰이는 정규표현식
+  - 카카오모먼트
+  - 카카오비즈보드
+  - 카카오광고
+  - 카카오모먼트광고
 
 description: '알아두면 유용한 정규표현식의 개념과 이해'
 ---
 
-## 자주 쓰이는 정규표현식
-#### 알아두면 유용하게 써먹는 정규표현식
+## 망했다
+#### 망했따
 <br>
 ##### 정규표현식 이란?
 
