--- a/_posts/2022-01-30-kakao.md
+++ b/_posts/2022-01-30-kakao.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-permalink: /mkt-regex/
+permalink: /mkt-kakao/
 title: '카카오모먼트 광고 알아보기'
 date: 2022-01-30 18:55:00 +09:00
 feature: '/img/posts/10/main.jpg'
@@ -15,8 +15,8 @@ tags:
 description: '카카오모먼트 광고 알아보기 (기초)'
 ---
 
-## 망했다
-#### 망했따
+## 카카오모먼트 광고 -기초편-
+#### 카카오모먼트란?
 <br>
 ##### 카카오모먼트 광고 알아보기
 
